--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-hateoas-links": "^1.0.9",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "router": "^1.3.3"
   },
   "devDependencies": {},
   "scripts": {
