--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-hateoas-links": "^1.0.9",
+    "finalhandler": "^1.1.1",
     "pg": "^7.4.3",
     "router": "^1.3.3"
   },
