--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.3",
     "express-hateoas-links": "^1.0.9",
     "finalhandler": "^1.1.1",
+    "googleapis": "^32.0.0",
     "pg": "^7.4.3",
     "router": "^1.3.3"
   },
