adds @google-cloud/storage to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Messing around with cloud functions",
   "main": "function.js",
   "dependencies": {
+    "@google-cloud/storage": "^1.7.0",
     "express": "^4.16.3",
     "express-hateoas-links": "^1.0.9",
     "finalhandler": "^1.1.1",
